# spotify-api-client

./: .gitignore  README.md  prek.toml  pyproject.toml
spotify_api_client/: __init__.py  auth_client.py  logger_setup.py  spotify_client.py
src/spotify_api_client/: __init__.py  auth_client.py  spotify_client.py
